--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@cypress/puppeteer": "^0.1.5",
     "cypress": "^13.16.0",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
