--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdoc": "^4.0.4"
   },
   "scripts": {
     "test": "jest --coverage",
