--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,16 +15,15 @@ jobs:
 
     - name: Setup Node
       uses: actions/setup-node@v4
-      with:
-        node-version: '22.12.0'
 
-    - name: Install JSDoc
-      run: npm install -g jsdoc
+    - name : Install JsDoc
+      run : npm install -g jsdoc
 
     - name: Generate Documentation
-      run: jsdoc -c jsdoc.json
+      run: jsdoc *.js
 
     - name: Deploy Documentation
+    
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
